--- a/src/Customers.Api/appsettings.json
+++ b/src/Customers.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Database": {
-    "ConnectionString": "Server=localhost;Port=5432;Database=mydb;User ID=course;Password=changeme;"
+    "ConnectionString": "Server=db;Port=5432;Database=mydb;User ID=course;Password=changeme;"
   },
   "GitHub": {
     "ApiBaseUrl": "https://api.github.com"
