--- a/playwright/src/Customers.WebApp/appsettings.json
+++ b/playwright/src/Customers.WebApp/appsettings.json
@@ -2,6 +2,9 @@
   "Database": {
     "ConnectionString": "Server=localhost;Port=5432;Database=mydb;User ID=course;Password=changeme;"
   },
+  "GitHub": {
+    "ApiBaseUrl": "https://api.github.com"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
