--- a/playwright/tests/Customers.WebApp.Tests.Integration/Customers.WebApp.Tests.Integration.csproj
+++ b/playwright/tests/Customers.WebApp.Tests.Integration/Customers.WebApp.Tests.Integration.csproj
@@ -14,17 +14,11 @@
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Ductus.FluentDocker" Version="2.10.59" />
     <PackageReference Include="FluentAssertions" Version="6.12.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
-    <PackageReference Include="Testcontainers.PostgreSql" Version="3.9.0" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.44.0" />
     <PackageReference Include="WireMock.Net" Version="1.5.58" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\src\Customers.Api\Customers.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
