Added playwright integration tests

--- a/playwright/tests/Customers.WebApp.Tests.Integration/docker-compose.integration.yml
+++ b/playwright/tests/Customers.WebApp.Tests.Integration/docker-compose.integration.yml
@@ -2,7 +2,7 @@
 
 services:
 
-  test-app: 
+  test-app:
     build: ../../src/Customers.WebApp
     ports:
       - "7780:443"
@@ -14,9 +14,12 @@ services:
       - ASPNETCORE_Environment=Production
       - CustomersWebApp_Database__ConnectionString=Server=test-db;Port=5432;Database=mydb;User ID=course;Password=changeme;
       - CustomersWebApp_GitHub__ApiBaseUrl=http://localhost:9850
-  
+    depends_on: 
+      test-db:
+        condition: service_healthy
+
   test-db:
-    image: postgres
+    image: postgres:latest
     restart: always
     environment:
       - POSTGRES_USER=course
