--- a/playwright/tests/Customers.WebApp.Tests.Integration/Customers.WebApp.Tests.Integration.csproj
+++ b/playwright/tests/Customers.WebApp.Tests.Integration/Customers.WebApp.Tests.Integration.csproj
@@ -22,6 +22,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\Customers.WebApp\Customers.WebApp.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
